--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.0.168:3306/shenzhou?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/shenzhou?serverTimezone=UTC
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
