--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     url: jdbc:mysql://localhost:3306/shenzhou?serverTimezone=UTC
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
+#  mvc:
+#    hiddenmethod:
+#      filter:
+#        enabled: true
